@@ -1,3 +1,13 @@
+2021-06-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/stm8/main.c,
+	  src/stm8/gen.c,
+	  src/SDCC.lex,
+	  src/SDCC.y,
+	  src/SDCCsymt.c,
+	  src/SDCCsymt.h:
+	  Experimental __newcall calling convention.
+
 2021-06-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/stm8/gen.c (genFunction): possible fix for bug #3199
